--- a/pom.xml
+++ b/pom.xml
@@ -135,8 +135,8 @@
 		<!-- CODE COVERAGE -->
 		    <plugin>
                      <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-war-plugin</artifactId>
-                     <version>3.2.2</version>
+                     <artifactId>maven-resources-plugin</artifactId>
+                     <version>2.6</version>
             </plugin>
  		    <plugin>
  		        <groupId>org.jacoco</groupId>
