--- a/pom.xml
+++ b/pom.xml
@@ -135,8 +135,12 @@
 		<!-- CODE COVERAGE -->
 		    <plugin>
                      <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-war-plugin</artifactId>
-                     <version>3.8.6</version>
+                     <artifactId>maven-compiler-plugin</artifactId>
+                     <version>3.11.0</version>
+                     <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                     </configuration>
             </plugin>
  		    <plugin>
  		        <groupId>org.jacoco</groupId>
