--- a/pom.xml
+++ b/pom.xml
@@ -135,8 +135,8 @@
 		<!-- CODE COVERAGE -->
 		    <plugin>
                      <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-compiler-plugin</artifactId>
-                     <version>3.6.1</version>
+                     <artifactId>maven-war-plugin</artifactId>
+                     <version>3.2.2</version>
                      <configuration>
                         <source>1.8</source>
                         <target>1.8</target>
